--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,8 +1,5 @@
 .navbar {
   padding: 20px 0 10px;
-  .navbar-brand {
-    // height: 58px;
-  }
   .navbar-toggler {
     border-color: rgba(0, 0, 0, 0);
   }
@@ -10,17 +7,17 @@
     justify-content: flex-end;
     flex: 1;
     .nav-item a {
-      color: #2e2e2e;
+      color: $grey;
     }
   }
   .btn-link {
-    color: #2e2e2e;
+    color: $grey;
     font-size: 14px;
   }
 }
 
 
-@include media-breakpoint-down(sm) {
+@include media-breakpoint-down(md) {
   .navbar {
     .navbar-brand {
       img {
