--- a/styles/common.scss
+++ b/styles/common.scss
@@ -1,5 +1,9 @@
+// .btn-secondary {
+//   color: $white;
+// }
+
 .text-underline {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
 
 .btn-common {
