--- a/css/main.css
+++ b/css/main.css
@@ -19,7 +19,7 @@
   --gray: #868e96;
   --gray-dark: #343a40;
   --primary: #2e2e2e;
-  --secondary: #868e96;
+  --secondary: #9fa0a0;
   --success: #6ad500;
   --info: #2b00ff;
   --warning: #ffde00;
@@ -60,7 +60,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #000000;
+  color: #686868;
   text-align: left;
   background-color: #fff; }
 
@@ -140,12 +140,12 @@ sup {
   top: -.5em; }
 
 a {
-  color: #2e2e2e;
+  color: #686868;
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects; }
   a:hover {
-    color: #080808;
+    color: #424242;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -2057,13 +2057,13 @@ pre {
 .table-secondary,
 .table-secondary > th,
 .table-secondary > td {
-  background-color: #dddfe2; }
+  background-color: #e4e4e4; }
 
 .table-hover .table-secondary:hover {
-  background-color: #cfd2d6; }
+  background-color: #d7d7d7; }
   .table-hover .table-secondary:hover > td,
   .table-hover .table-secondary:hover > th {
-    background-color: #cfd2d6; }
+    background-color: #d7d7d7; }
 
 .table-success,
 .table-success > th,
@@ -2218,7 +2218,7 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.375rem 0.75rem;
+  padding: 0.7rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   color: #495057;
@@ -2257,7 +2257,7 @@ pre {
     opacity: 1; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.25rem + 2px); }
+  height: calc(2.9rem + 2px); }
 
 select.form-control:focus::-ms-value {
   color: #495057;
@@ -2269,8 +2269,8 @@ select.form-control:focus::-ms-value {
   width: 100%; }
 
 .col-form-label {
-  padding-top: calc(0.375rem + 1px);
-  padding-bottom: calc(0.375rem + 1px);
+  padding-top: calc(0.7rem + 1px);
+  padding-bottom: calc(0.7rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5; }
@@ -2290,8 +2290,8 @@ select.form-control:focus::-ms-value {
 .form-control-plaintext {
   display: block;
   width: 100%;
-  padding-top: 0.375rem;
-  padding-bottom: 0.375rem;
+  padding-top: 0.7rem;
+  padding-bottom: 0.7rem;
   margin-bottom: 0;
   line-height: 1.5;
   background-color: transparent;
@@ -2629,7 +2629,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  padding: 0.375rem 0.75rem;
+  padding: 0.7rem 0.75rem;
   font-size: 1rem;
   line-height: 1.5;
   border-radius: 0;
@@ -2680,30 +2680,30 @@ fieldset[disabled] a.btn {
 
 .btn-secondary {
   color: #fff;
-  background-color: #868e96;
-  border-color: #868e96; }
+  background-color: #9fa0a0;
+  border-color: #9fa0a0; }
   .btn-secondary:hover {
     color: #fff;
-    background-color: #727b84;
-    border-color: #6c757d; }
+    background-color: #8c8d8d;
+    border-color: #858787; }
   .btn-secondary:focus, .btn-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5); }
   .btn-secondary.disabled, .btn-secondary:disabled {
-    background-color: #868e96;
-    border-color: #868e96; }
+    background-color: #9fa0a0;
+    border-color: #9fa0a0; }
   .btn-secondary:not([disabled]):not(.disabled):active, .btn-secondary:not([disabled]):not(.disabled).active,
   .show > .btn-secondary.dropdown-toggle {
     color: #fff;
-    background-color: #6c757d;
-    border-color: #666e76; }
+    background-color: #858787;
+    border-color: #7f8080; }
     .btn-secondary:not([disabled]):not(.disabled):active:focus, .btn-secondary:not([disabled]):not(.disabled).active:focus,
     .show > .btn-secondary.dropdown-toggle:focus {
-      -webkit-box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5);
-              box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5); }
+      -webkit-box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5);
+              box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5); }
 
 .btn-success {
-  color: #212529;
+  color: #fff;
   background-color: #6ad500;
   border-color: #6ad500; }
   .btn-success:hover {
@@ -2870,27 +2870,27 @@ fieldset[disabled] a.btn {
             box-shadow: 0 0 0 0.2rem rgba(46, 46, 46, 0.5); }
 
 .btn-outline-secondary {
-  color: #868e96;
+  color: #9fa0a0;
   background-color: transparent;
   background-image: none;
-  border-color: #868e96; }
+  border-color: #9fa0a0; }
   .btn-outline-secondary:hover {
     color: #fff;
-    background-color: #868e96;
-    border-color: #868e96; }
+    background-color: #9fa0a0;
+    border-color: #9fa0a0; }
   .btn-outline-secondary:focus, .btn-outline-secondary.focus {
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5); }
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5); }
   .btn-outline-secondary.disabled, .btn-outline-secondary:disabled {
-    color: #868e96;
+    color: #9fa0a0;
     background-color: transparent; }
   .btn-outline-secondary:not([disabled]):not(.disabled):active, .btn-outline-secondary:not([disabled]):not(.disabled).active,
   .show > .btn-outline-secondary.dropdown-toggle {
     color: #212529;
-    background-color: #868e96;
-    border-color: #868e96;
-    -webkit-box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5);
-            box-shadow: 0 0 0 0.2rem rgba(134, 142, 150, 0.5); }
+    background-color: #9fa0a0;
+    border-color: #9fa0a0;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5);
+            box-shadow: 0 0 0 0.2rem rgba(159, 160, 160, 0.5); }
 
 .btn-outline-success {
   color: #6ad500;
@@ -2898,7 +2898,7 @@ fieldset[disabled] a.btn {
   background-image: none;
   border-color: #6ad500; }
   .btn-outline-success:hover {
-    color: #212529;
+    color: #fff;
     background-color: #6ad500;
     border-color: #6ad500; }
   .btn-outline-success:focus, .btn-outline-success.focus {
@@ -3032,10 +3032,10 @@ fieldset[disabled] a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #2e2e2e;
+  color: #686868;
   background-color: transparent; }
   .btn-link:hover {
-    color: #080808;
+    color: #424242;
     text-decoration: underline;
     background-color: transparent;
     border-color: transparent; }
@@ -3125,7 +3125,7 @@ tbody.collapse.show {
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
   font-size: 1rem;
-  color: #000000;
+  color: #686868;
   text-align: left;
   list-style: none;
   background-color: #fff;
@@ -3436,7 +3436,7 @@ tbody.collapse.show {
   margin-left: -1px; }
 
 .input-group-text {
-  padding: 0.375rem 0.75rem;
+  padding: 0.7rem 0.75rem;
   margin-bottom: 0;
   font-size: 1rem;
   font-weight: 400;
@@ -3554,7 +3554,7 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.9rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -3600,14 +3600,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.9rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.25rem + 2px);
+  height: calc(2.9rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -3625,8 +3625,8 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.25rem + 2px);
-  padding: 0.375rem 0.75rem;
+  height: calc(2.9rem + 2px);
+  padding: 0.7rem 0.75rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -3639,8 +3639,8 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(2.25rem + 2px) - 1px * 2);
-    padding: 0.375rem 0.75rem;
+    height: calc(calc(2.9rem + 2px) - 1px * 2);
+    padding: 0.7rem 0.75rem;
     line-height: 1.5;
     color: #495057;
     content: "Browse";
@@ -4336,11 +4336,11 @@ tbody.collapse.show {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #2e2e2e;
+  color: #686868;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:focus, .page-link:hover {
-    color: #080808;
+    color: #424242;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
@@ -4427,17 +4427,17 @@ tbody.collapse.show {
 
 .badge-secondary {
   color: #fff;
-  background-color: #868e96; }
+  background-color: #9fa0a0; }
   .badge-secondary[href]:focus, .badge-secondary[href]:hover {
     color: #fff;
     text-decoration: none;
-    background-color: #6c757d; }
+    background-color: #858787; }
 
 .badge-success {
-  color: #212529;
+  color: #fff;
   background-color: #6ad500; }
   .badge-success[href]:focus, .badge-success[href]:hover {
-    color: #212529;
+    color: #fff;
     text-decoration: none;
     background-color: #51a200; }
 
@@ -4527,13 +4527,13 @@ tbody.collapse.show {
     color: black; }
 
 .alert-secondary {
-  color: #464a4e;
-  background-color: #e7e8ea;
-  border-color: #dddfe2; }
+  color: #535353;
+  background-color: #ececec;
+  border-color: #e4e4e4; }
   .alert-secondary hr {
-    border-top-color: #cfd2d6; }
+    border-top-color: #d7d7d7; }
   .alert-secondary .alert-link {
-    color: #2e3133; }
+    color: #3a3a3a; }
 
 .alert-success {
   color: #376f00;
@@ -4669,7 +4669,7 @@ tbody.collapse.show {
     text-decoration: none;
     background-color: #f8f9fa; }
   .list-group-item-action:active {
-    color: #000000;
+    color: #686868;
     background-color: #e9ecef; }
 
 .list-group-item {
@@ -4728,22 +4728,22 @@ button.list-group-item-primary {
     border-color: #181818; }
 
 .list-group-item-secondary {
-  color: #464a4e;
-  background-color: #dddfe2; }
+  color: #535353;
+  background-color: #e4e4e4; }
 
 a.list-group-item-secondary,
 button.list-group-item-secondary {
-  color: #464a4e; }
+  color: #535353; }
   a.list-group-item-secondary:focus, a.list-group-item-secondary:hover,
   button.list-group-item-secondary:focus,
   button.list-group-item-secondary:hover {
-    color: #464a4e;
-    background-color: #cfd2d6; }
+    color: #535353;
+    background-color: #d7d7d7; }
   a.list-group-item-secondary.active,
   button.list-group-item-secondary.active {
     color: #fff;
-    background-color: #464a4e;
-    border-color: #464a4e; }
+    background-color: #535353;
+    border-color: #535353; }
 
 .list-group-item-success {
   color: #376f00;
@@ -5222,7 +5222,7 @@ button.close {
 
 .popover-body {
   padding: 0.5rem 0.75rem;
-  color: #000000; }
+  color: #686868; }
 
 .carousel {
   position: relative; }
@@ -5421,12 +5421,12 @@ button.bg-primary:hover {
   background-color: #151515 !important; }
 
 .bg-secondary {
-  background-color: #868e96 !important; }
+  background-color: #9fa0a0 !important; }
 
 a.bg-secondary:focus, a.bg-secondary:hover,
 button.bg-secondary:focus,
 button.bg-secondary:hover {
-  background-color: #6c757d !important; }
+  background-color: #858787 !important; }
 
 .bg-success {
   background-color: #6ad500 !important; }
@@ -5504,7 +5504,7 @@ button.bg-dark:hover {
   border-color: #2e2e2e !important; }
 
 .border-secondary {
-  border-color: #868e96 !important; }
+  border-color: #9fa0a0 !important; }
 
 .border-success {
   border-color: #6ad500 !important; }
@@ -7793,10 +7793,10 @@ a.text-primary:focus, a.text-primary:hover {
   color: #151515 !important; }
 
 .text-secondary {
-  color: #868e96 !important; }
+  color: #9fa0a0 !important; }
 
 a.text-secondary:focus, a.text-secondary:hover {
-  color: #6c757d !important; }
+  color: #858787 !important; }
 
 .text-success {
   color: #6ad500 !important; }
