--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,7 @@ article, aside, dialog, figcaption, figure, footer, header, hgroup, main, nav, s
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #686868;
@@ -321,25 +321,25 @@ h1, h2, h3, h4, h5, h6,
   color: inherit; }
 
 h1, .h1 {
-  font-size: 2.5rem; }
-
-h2, .h2 {
   font-size: 2rem; }
 
+h2, .h2 {
+  font-size: 1.6rem; }
+
 h3, .h3 {
-  font-size: 1.75rem; }
+  font-size: 1.4rem; }
 
 h4, .h4 {
-  font-size: 1.5rem; }
+  font-size: 1.2rem; }
 
 h5, .h5 {
-  font-size: 1.25rem; }
-
-h6, .h6 {
   font-size: 1rem; }
 
+h6, .h6 {
+  font-size: 0.8rem; }
+
 .lead {
-  font-size: 1.25rem;
+  font-size: 1rem;
   font-weight: 300; }
 
 .display-1 {
@@ -397,7 +397,7 @@ mark,
 
 .blockquote {
   margin-bottom: 1rem;
-  font-size: 1.25rem; }
+  font-size: 1rem; }
 
 .blockquote-footer {
   display: block;
@@ -2218,8 +2218,8 @@ pre {
 .form-control {
   display: block;
   width: 100%;
-  padding: 0.7rem 0.75rem;
-  font-size: 1rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -2257,7 +2257,7 @@ pre {
     opacity: 1; }
 
 select.form-control:not([size]):not([multiple]) {
-  height: calc(2.9rem + 2px); }
+  height: calc(1.95rem + 2px); }
 
 select.form-control:focus::-ms-value {
   color: #495057;
@@ -2269,8 +2269,8 @@ select.form-control:focus::-ms-value {
   width: 100%; }
 
 .col-form-label {
-  padding-top: calc(0.7rem + 1px);
-  padding-bottom: calc(0.7rem + 1px);
+  padding-top: calc(0.375rem + 1px);
+  padding-bottom: calc(0.375rem + 1px);
   margin-bottom: 0;
   font-size: inherit;
   line-height: 1.5; }
@@ -2278,20 +2278,20 @@ select.form-control:focus::-ms-value {
 .col-form-label-lg {
   padding-top: calc(0.5rem + 1px);
   padding-bottom: calc(0.5rem + 1px);
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5; }
 
 .col-form-label-sm {
   padding-top: calc(0.25rem + 1px);
   padding-bottom: calc(0.25rem + 1px);
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.5; }
 
 .form-control-plaintext {
   display: block;
   width: 100%;
-  padding-top: 0.7rem;
-  padding-bottom: 0.7rem;
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
   margin-bottom: 0;
   line-height: 1.5;
   background-color: transparent;
@@ -2315,7 +2315,7 @@ select.form-control:focus::-ms-value {
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.5;
   border-radius: 0; }
 
@@ -2324,7 +2324,7 @@ select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.for
 .input-group-sm > .input-group-append > select.input-group-text:not([size]):not([multiple]),
 .input-group-sm > .input-group-prepend > select.btn:not([size]):not([multiple]),
 .input-group-sm > .input-group-append > select.btn:not([size]):not([multiple]) {
-  height: calc(1.8125rem + 2px); }
+  height: calc(1.55rem + 2px); }
 
 .form-control-lg, .input-group-lg > .form-control,
 .input-group-lg > .input-group-prepend > .input-group-text,
@@ -2332,7 +2332,7 @@ select.form-control-sm:not([size]):not([multiple]), .input-group-sm > select.for
 .input-group-lg > .input-group-prepend > .btn,
 .input-group-lg > .input-group-append > .btn {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0; }
 
@@ -2341,7 +2341,7 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
 .input-group-lg > .input-group-append > select.input-group-text:not([size]):not([multiple]),
 .input-group-lg > .input-group-prepend > select.btn:not([size]):not([multiple]),
 .input-group-lg > .input-group-append > select.btn:not([size]):not([multiple]) {
-  height: calc(2.875rem + 2px); }
+  height: calc(2.5rem + 2px); }
 
 .form-group {
   margin-bottom: 1rem; }
@@ -2629,8 +2629,8 @@ select.form-control-lg:not([size]):not([multiple]), .input-group-lg > select.for
       -ms-user-select: none;
           user-select: none;
   border: 1px solid transparent;
-  padding: 0.7rem 0.75rem;
-  font-size: 1rem;
+  padding: 0.375rem 0.75rem;
+  font-size: 0.8rem;
   line-height: 1.5;
   border-radius: 0;
   -webkit-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -3049,13 +3049,13 @@ fieldset[disabled] a.btn {
 
 .btn-lg, .btn-group-lg > .btn {
   padding: 0.5rem 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5;
   border-radius: 0; }
 
 .btn-sm, .btn-group-sm > .btn {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.5;
   border-radius: 0; }
 
@@ -3124,7 +3124,7 @@ tbody.collapse.show {
   min-width: 10rem;
   padding: 0.5rem 0;
   margin: 0.125rem 0 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: #686868;
   text-align: left;
   list-style: none;
@@ -3241,7 +3241,7 @@ tbody.collapse.show {
   display: block;
   padding: 0.5rem 1.5rem;
   margin-bottom: 0;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   color: #868e96;
   white-space: nowrap; }
 
@@ -3436,9 +3436,9 @@ tbody.collapse.show {
   margin-left: -1px; }
 
 .input-group-text {
-  padding: 0.7rem 0.75rem;
+  padding: 0.375rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   font-weight: 400;
   line-height: 1.5;
   color: #495057;
@@ -3554,7 +3554,7 @@ tbody.collapse.show {
 .custom-select {
   display: inline-block;
   width: 100%;
-  height: calc(2.9rem + 2px);
+  height: calc(1.95rem + 2px);
   padding: 0.375rem 1.75rem 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -3585,13 +3585,13 @@ tbody.collapse.show {
     opacity: 0; }
 
 .custom-select-sm {
-  height: calc(1.8125rem + 2px);
+  height: calc(1.55rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 75%; }
 
 .custom-select-lg {
-  height: calc(2.875rem + 2px);
+  height: calc(2.5rem + 2px);
   padding-top: 0.375rem;
   padding-bottom: 0.375rem;
   font-size: 125%; }
@@ -3600,14 +3600,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(2.9rem + 2px);
+  height: calc(1.95rem + 2px);
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(2.9rem + 2px);
+  height: calc(1.95rem + 2px);
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -3625,8 +3625,8 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(2.9rem + 2px);
-  padding: 0.7rem 0.75rem;
+  height: calc(1.95rem + 2px);
+  padding: 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
   background-color: #fff;
@@ -3639,8 +3639,8 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(2.9rem + 2px) - 1px * 2);
-    padding: 0.7rem 0.75rem;
+    height: calc(calc(1.95rem + 2px) - 1px * 2);
+    padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: #495057;
     content: "Browse";
@@ -3748,10 +3748,10 @@ tbody.collapse.show {
 
 .navbar-brand {
   display: inline-block;
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  padding-top: 0.35rem;
+  padding-bottom: 0.35rem;
   margin-right: 1rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: inherit;
   white-space: nowrap; }
   .navbar-brand:focus, .navbar-brand:hover {
@@ -3792,7 +3792,7 @@ tbody.collapse.show {
 
 .navbar-toggler {
   padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -4371,7 +4371,7 @@ tbody.collapse.show {
 
 .pagination-lg .page-link {
   padding: 0.75rem 1.5rem;
-  font-size: 1.25rem;
+  font-size: 1rem;
   line-height: 1.5; }
 
 .pagination-lg .page-item:first-child .page-link {
@@ -4384,7 +4384,7 @@ tbody.collapse.show {
 
 .pagination-sm .page-link {
   padding: 0.25rem 0.5rem;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   line-height: 1.5; }
 
 .pagination-sm .page-item:first-child .page-link {
@@ -4509,7 +4509,7 @@ tbody.collapse.show {
   font-weight: 700; }
 
 .alert-dismissible {
-  padding-right: 4rem; }
+  padding-right: 3.7rem; }
   .alert-dismissible .close {
     position: absolute;
     top: 0;
@@ -4607,7 +4607,7 @@ tbody.collapse.show {
   display: flex;
   height: 1rem;
   overflow: hidden;
-  font-size: 0.75rem;
+  font-size: 0.6rem;
   background-color: #e9ecef;
   border-radius: 0; }
 
@@ -4855,7 +4855,7 @@ button.list-group-item-dark {
 
 .close {
   float: right;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: 700;
   line-height: 1;
   color: #000;
@@ -5033,7 +5033,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   word-wrap: break-word;
   opacity: 0; }
   .tooltip.show {
@@ -5118,7 +5118,7 @@ button.close {
   word-spacing: normal;
   white-space: normal;
   line-break: auto;
-  font-size: 0.875rem;
+  font-size: 0.7rem;
   word-wrap: break-word;
   background-color: #fff;
   background-clip: padding-box;
@@ -5211,7 +5211,7 @@ button.close {
 .popover-header {
   padding: 0.5rem 0.75rem;
   margin-bottom: 0;
-  font-size: 1rem;
+  font-size: 0.8rem;
   color: inherit;
   background-color: #f7f7f7;
   border-bottom: 1px solid #ebebeb;
@@ -7894,6 +7894,33 @@ a.text-dark:focus, a.text-dark:hover {
   .table-bordered td {
     border: 1px solid #ddd !important; } }
 
+.sub-banner {
+  position: relative;
+  height: 396px; }
+  .sub-banner .container {
+    position: relative;
+    height: 396px; }
+  .sub-banner h1 {
+    color: #fff;
+    position: absolute;
+    left: 20px;
+    bottom: -17px; }
+
+@media (max-width: 767.99px) {
+  .sub-banner {
+    height: 250px; }
+    .sub-banner .container {
+      height: 250px; }
+    .sub-banner h1 {
+      font-size: 2rem;
+      color: #fff;
+      position: absolute;
+      left: 20px;
+      bottom: -1rem; } }
+
+.btn-lg, .btn-group-lg > .btn, .btn-group-lg > .btn {
+  font-size: 1.2rem; }
+
 .text-underline {
   text-decoration: underline; }
 
@@ -8025,10 +8052,13 @@ a.text-dark:focus, a.text-dark:hover {
         -ms-flex: 1;
             flex: 1; }
     .navbar .navbar-nav .nav-item a {
-      color: #2e2e2e; }
+      color: #2e2e2e;
+      font-size: 1rem;
+      font-weight: bold; }
   .navbar .btn-link {
     color: #2e2e2e;
-    font-size: 14px; }
+    font-size: .8rem;
+    line-height: 1rem; }
 
 @media (max-width: 991.99px) {
   .navbar .navbar-brand img {
