history list page

--- a/css/main.css
+++ b/css/main.css
@@ -4858,11 +4858,11 @@ button.list-group-item-dark {
   font-size: 1.2rem;
   font-weight: 700;
   line-height: 1;
-  color: #000;
+  color: #000000;
   text-shadow: 0 1px 0 #fff;
   opacity: .5; }
   .close:focus, .close:hover {
-    color: #000;
+    color: #000000;
     text-decoration: none;
     opacity: .75; }
   .close:not([disabled]):not(.disabled) {
@@ -4942,7 +4942,7 @@ button.close {
   bottom: 0;
   left: 0;
   z-index: 1040;
-  background-color: #000; }
+  background-color: #000000; }
   .modal-backdrop.fade {
     opacity: 0; }
   .modal-backdrop.show {
@@ -5056,7 +5056,7 @@ button.close {
     .bs-tooltip-top .arrow::before, .bs-tooltip-auto[x-placement^="top"] .arrow::before {
       top: 0;
       border-width: 0.4rem 0.4rem 0;
-      border-top-color: #000; }
+      border-top-color: #000000; }
 
 .bs-tooltip-right, .bs-tooltip-auto[x-placement^="right"] {
   padding: 0 0.4rem; }
@@ -5067,7 +5067,7 @@ button.close {
     .bs-tooltip-right .arrow::before, .bs-tooltip-auto[x-placement^="right"] .arrow::before {
       right: 0;
       border-width: 0.4rem 0.4rem 0.4rem 0;
-      border-right-color: #000; }
+      border-right-color: #000000; }
 
 .bs-tooltip-bottom, .bs-tooltip-auto[x-placement^="bottom"] {
   padding: 0.4rem 0; }
@@ -5076,7 +5076,7 @@ button.close {
     .bs-tooltip-bottom .arrow::before, .bs-tooltip-auto[x-placement^="bottom"] .arrow::before {
       bottom: 0;
       border-width: 0 0.4rem 0.4rem;
-      border-bottom-color: #000; }
+      border-bottom-color: #000000; }
 
 .bs-tooltip-left, .bs-tooltip-auto[x-placement^="left"] {
   padding: 0 0.4rem; }
@@ -5087,14 +5087,14 @@ button.close {
     .bs-tooltip-left .arrow::before, .bs-tooltip-auto[x-placement^="left"] .arrow::before {
       left: 0;
       border-width: 0.4rem 0 0.4rem 0.4rem;
-      border-left-color: #000; }
+      border-left-color: #000000; }
 
 .tooltip-inner {
   max-width: 200px;
   padding: 0.25rem 0.5rem;
   color: #fff;
   text-align: center;
-  background-color: #000;
+  background-color: #000000;
   border-radius: 0; }
 
 .popover {
@@ -7939,11 +7939,17 @@ a.text-dark:focus, a.text-dark:hover {
 .tag-yellow {
   background-color: #ffde00; }
 
+.color-yellow {
+  color: #ffde00; }
+
 .icon-pink {
   background-color: #dc80a5; }
 
 .tag-pink {
   background-color: #dc80a5; }
+
+.color-pink {
+  color: #dc80a5; }
 
 .icon-rose {
   background-color: #d1007f; }
@@ -7951,11 +7957,17 @@ a.text-dark:focus, a.text-dark:hover {
 .tag-rose {
   background-color: #d1007f; }
 
+.color-rose {
+  color: #d1007f; }
+
 .icon-red {
   background-color: #d30012; }
 
 .tag-red {
   background-color: #d30012; }
+
+.color-red {
+  color: #d30012; }
 
 .icon-blue {
   background-color: #004fff; }
@@ -7963,11 +7975,17 @@ a.text-dark:focus, a.text-dark:hover {
 .tag-blue {
   background-color: #004fff; }
 
+.color-blue {
+  color: #004fff; }
+
 .icon-cyan {
   background-color: #2b00ff; }
 
 .tag-cyan {
   background-color: #2b00ff; }
+
+.color-cyan {
+  color: #2b00ff; }
 
 .icon-green {
   background-color: #6ad500; }
@@ -7975,11 +7993,26 @@ a.text-dark:focus, a.text-dark:hover {
 .tag-green {
   background-color: #6ad500; }
 
+.color-green {
+  color: #6ad500; }
+
 .icon-orange {
   background-color: #ff7900; }
 
 .tag-orange {
   background-color: #ff7900; }
+
+.color-orange {
+  color: #ff7900; }
+
+.icon-black {
+  background-color: #000000; }
+
+.tag-black {
+  background-color: #000000; }
+
+.color-black {
+  color: #000000; }
 
 .tag {
   font-size: 14px;
@@ -8004,7 +8037,7 @@ a.text-dark:focus, a.text-dark:hover {
     position: absolute;
     width: 60px;
     height: 1px;
-    background: #000;
+    background: #000000;
     left: 50%;
     margin-left: -30px; }
 
@@ -8014,8 +8047,8 @@ a.text-dark:focus, a.text-dark:hover {
     border-radius: 0; }
   .list-competiton .card .card-body {
     position: relative;
-    border-top: 1px solid #000;
-    border-bottom: 1px solid #000;
+    border-top: 1px solid #000000;
+    border-bottom: 1px solid #000000;
     padding: .75rem 0; }
     .list-competiton .card .card-body h5:first-child {
       margin-bottom: 0; }
@@ -8039,6 +8072,41 @@ a.text-dark:focus, a.text-dark:hover {
       margin-top: 10px;
       margin-bottom: 10px;
       color: #2b00ff; }
+
+.item-history {
+  border: none; }
+  .item-history .card-img-top {
+    border-radius: 0; }
+  .item-history .card-body {
+    position: relative;
+    border-top: 3px solid #000000;
+    border-bottom: 3px solid #000000;
+    padding: .5rem 0 .75rem; }
+    .item-history .card-body .head {
+      margin: 0 auto;
+      border-bottom: 2px solid #9fa0a0;
+      padding-bottom: .5rem; }
+      .item-history .card-body .head .label {
+        font-size: 18px;
+        text-transform: uppercase; }
+    .item-history .card-body h3 {
+      font-weight: bold;
+      color: #000000; }
+    .item-history .card-body .action {
+      margin: 0 auto; }
+      .item-history .card-body .action .far {
+        font-size: 1.2rem; }
+      .item-history .card-body .action span {
+        color: #000000; }
+
+.item-sub-history {
+  border: none; }
+  .item-sub-history h4, .item-sub-history p {
+    color: #fff; }
+  .item-sub-history h4 {
+    margin-bottom: 1rem; }
+  .item-sub-history .card-body {
+    background: #9e9897; }
 
 .navbar {
   padding: 20px 0 10px; }
@@ -8071,7 +8139,7 @@ a.text-dark:focus, a.text-dark:hover {
   padding: 50px 0;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
-  background: #000; }
+  background: #000000; }
   .footer span, .footer a, .footer p {
     font-size: 12px;
     color: #fff; }
