--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,6 +63,8 @@ $border-radius-sm: 0;
 @import "common";
 @import "header";
 @import "footer";
+@import "editor";
 
 // page
 @import "signup";
+@import "news";
