--- a/styles/common.scss
+++ b/styles/common.scss
@@ -9,10 +9,13 @@
     height: 396px;
   }
   h1 {
+    font-size: 3rem;
     color: $white;
     position: absolute;
-    left: 20px;
-    bottom: -17px;
+    left: 1.2rem;
+    bottom: -.7rem;
+    margin: 0;
+    padding: 0;
   }
 }
 @include media-breakpoint-down(sm) {
@@ -23,10 +26,7 @@
     }
     h1 {
       font-size: 2rem;
-      color: $white;
-      position: absolute;
-      left: 20px;
-      bottom: -1rem;
+      bottom: -.4rem;
     }
   }
 }
