judge detail page

--- a/css/main.css
+++ b/css/main.css
@@ -8195,6 +8195,27 @@ a.text-dark:focus, a.text-dark:hover {
   .category-container a.active {
     font-weight: bold; }
 
+.judge-detail .banner .avatar {
+  -webkit-box-flex: initial;
+      -ms-flex: initial;
+          flex: initial;
+  width: 16rem; }
+  .judge-detail .banner .avatar img {
+    border: 2px solid #6d6d6d; }
+
+.judge-detail .banner .desc {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1; }
+
+@media (max-width: 767.99px) {
+  .judge-detail .banner .avatar {
+    width: 8rem; }
+  .judge-detail .banner .desc h1 {
+    font-size: 1.2rem; }
+  .judge-detail .banner .desc h3 {
+    font-size: .9rem; } }
+
 .navbar {
   padding: 20px 0 10px; }
   .navbar .navbar-toggler {
