--- a/styles/main.scss
+++ b/styles/main.scss
@@ -35,6 +35,7 @@ $green:       #6ad500;
 $orange:      #ff7900;
 $dark-grey:   #2e2e2e;
 $grey:        #9fa0a0;
+$light-grey:  #dfdfdf;
 $black:       #000000;
 
 $primary:    $dark-grey;
@@ -53,6 +54,7 @@ $icons: map-merge((
   "orange": $orange,
   "dark-grey": $dark-grey,
   "grey": $grey,
+  "light-grey": $light-grey,
   "black": $black
 ), $icons);
 
