--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,6 +11,11 @@ $yiq-contrasted-threshold: 160;
 // $input-btn-padding-y: .2rem;
 // $btn-padding-y: .375rem;
 
+$custom-file-text: (
+  en: "Browse",
+  zh: "浏览"
+);
+$custom-file-height: 2.6rem;
 
 $spacer: 1rem;
 $spacers: (
