--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*!
  * Bootstrap v4.0.0-beta.3 (https://getbootstrap.com)
  * Copyright 2011-2017 The Bootstrap Authors
@@ -3600,14 +3601,14 @@ tbody.collapse.show {
   position: relative;
   display: inline-block;
   width: 100%;
-  height: calc(1.95rem + 2px);
+  height: 2.6rem;
   margin-bottom: 0; }
 
 .custom-file-input {
   position: relative;
   z-index: 2;
   width: 100%;
-  height: calc(1.95rem + 2px);
+  height: 2.6rem;
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-control {
@@ -3618,6 +3619,8 @@ tbody.collapse.show {
       border-color: #6e6e6e; }
   .custom-file-input:lang(en) ~ .custom-file-label::after {
     content: "Browse"; }
+  .custom-file-input:lang(zh) ~ .custom-file-label::after {
+    content: "浏览"; }
 
 .custom-file-label {
   position: absolute;
@@ -3625,7 +3628,7 @@ tbody.collapse.show {
   right: 0;
   left: 0;
   z-index: 1;
-  height: calc(1.95rem + 2px);
+  height: 2.6rem;
   padding: 0.375rem 0.75rem;
   line-height: 1.5;
   color: #495057;
@@ -3639,7 +3642,7 @@ tbody.collapse.show {
     bottom: 0;
     z-index: 3;
     display: block;
-    height: calc(calc(1.95rem + 2px) - 1px * 2);
+    height: calc(2.6rem - 1px * 2);
     padding: 0.375rem 0.75rem;
     line-height: 1.5;
     color: #495057;
@@ -7901,6 +7904,12 @@ a.text-dark:focus, a.text-dark:hover {
             flex: 0 0 20%;
     max-width: 20%; } }
 
+.input-group-lg .custom-file-label {
+  line-height: 1.8;
+  font-size: 1rem; }
+  .input-group-lg .custom-file-label::after {
+    line-height: 1.8; }
+
 .sub-banner {
   position: relative;
   height: 396px; }
@@ -8272,6 +8281,21 @@ a.text-dark:focus, a.text-dark:hover {
     display: inline-block;
     padding-top: .8rem;
     border-top: 6px solid #717171; }
+
+.judge-sign-in .fas {
+  font-size: 1.6rem;
+  cursor: pointer; }
+  .judge-sign-in .fas:hover {
+    color: #2e2e2e; }
+
+.judge-sign-in .step-3 .avatar {
+  height: 20rem;
+  position: relative; }
+  .judge-sign-in .step-3 .avatar .custom-file-input {
+    position: absolute; }
+
+.judge-sign-in .step-3 textarea {
+  height: 20rem; }
 
 .navbar {
   padding: 20px 0 10px; }
