--- a/styles/common.scss
+++ b/styles/common.scss
@@ -345,6 +345,11 @@
       position: relative;
       .custom-file-input {
         position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
       }
     }
     textarea {
