--- a/styles/common.scss
+++ b/styles/common.scss
@@ -199,6 +199,7 @@
 }
 
 .item-top3 {
+  @extend .item-history;
   .card-body {
     border-top: 1px solid $black;
     border-bottom: 1px solid $black;
@@ -355,6 +356,60 @@
     }
     .btn-save {
 
+    }
+  }
+}
+
+.page-group-detail {
+  .header {
+    border-bottom: 1px solid $grey;
+  }
+  .work-container {
+    .item-top3 {
+      .card-body {
+        border-top: none;
+        padding-top: 0;
+      }
+    }
+  }
+  .avatar-container {
+    position: relative;
+    width: 21rem;
+    margin-right: 2rem;
+    margin-bottom: 1rem;
+    padding: .5rem;
+    background: #f7f8f8;
+    &.captain {
+      background: none;
+    }
+    &.flex-column {
+      img {
+        width: 5rem;
+      }
+      .row {
+        width: 100%;
+        margin-top: .8rem;
+      }
+    }
+    img {
+      width: 8rem;
+    }
+    .role, .name {
+      font-weight: bold;
+    }
+    .role {
+      font-size: 1rem;
+    }
+    .name {
+      font-size: 1.8rem;
+    }
+    a {
+      position: absolute;
+      right: .5rem;
+      top: .5rem;
+      i {
+        font-size: 2rem;
+      }
     }
   }
 }
