--- a/css/main.css
+++ b/css/main.css
@@ -8342,6 +8342,52 @@ a.text-dark:focus, a.text-dark:hover {
     .page-group-detail .avatar-container a i {
       font-size: 2rem; }
 
+.user-center-menu {
+  border-bottom: 1px solid #9fa0a0; }
+  .user-center-menu ul {
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+    padding-top: 1rem; }
+    .user-center-menu ul li {
+      float: left;
+      list-style-type: none;
+      margin-right: 2rem; }
+      .user-center-menu ul li.active {
+        border-bottom: 3px solid #2e2e2e; }
+      .user-center-menu ul li a {
+        display: block;
+        font-size: .9rem;
+        height: 2rem;
+        line-height: 2rem;
+        width: 7rem;
+        text-align: center; }
+        .user-center-menu ul li a:hover {
+          text-decoration: none; }
+        .user-center-menu ul li a i {
+          position: absolute;
+          width: 10px;
+          height: 10px;
+          background: #d30012;
+          border-radius: 5px; }
+
+.user-center-body .info-container .col-6 {
+  padding-left: 0; }
+  .user-center-body .info-container .col-6 > div {
+    height: 6.25rem; }
+    .user-center-body .info-container .col-6 > div input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      z-index: 2; }
+    .user-center-body .info-container .col-6 > div i {
+      font-size: 1.2rem; }
+
+.user-center-body .info-container .col-18 {
+  padding-right: 0; }
+
 .navbar {
   padding: 20px 0 10px; }
   .navbar .navbar-toggler {
