--- a/styles/common.scss
+++ b/styles/common.scss
@@ -474,3 +474,13 @@
     }
   }
 }
+
+.message-list {
+  li {
+    list-style-type: none;
+    border-bottom: 1px solid $grey;
+    &:hover {
+      background: #eeeeee;
+    }
+  }
+}
