--- a/css/main.css
+++ b/css/main.css
@@ -8453,6 +8453,20 @@ a.text-dark:focus, a.text-dark:hover {
   .message-list li:hover {
     background: #eeeeee; }
 
+.review-list .item-review {
+  border: none;
+  cursor: pointer; }
+  .review-list .item-review .card-img-top {
+    border-radius: 0; }
+  .review-list .item-review .card-body {
+    position: relative;
+    border-top: 2px solid #000000;
+    border-bottom: 2px solid #000000;
+    padding: .5rem 0 .75rem; }
+    .review-list .item-review .card-body h3 {
+      font-weight: bold;
+      color: #000000; }
+
 .navbar {
   padding: 20px 0 10px; }
   .navbar .navbar-toggler {
