--- a/styles/common.scss
+++ b/styles/common.scss
@@ -530,3 +530,23 @@
     }
   }
 }
+
+.review-list {
+  .item-review {
+    border: none;
+    cursor: pointer;
+    .card-img-top {
+      border-radius: 0;
+    }
+    .card-body {
+      position: relative;
+      border-top: 2px solid $black;
+      border-bottom: 2px solid $black;
+      padding: .5rem 0 .75rem;
+      h3 {
+        font-weight: bold;
+        color: $black;
+      }
+    }
+  }
+}
